tests/ui/nll/relate_tys/impl-fn-ignore-binder-via-bottom.stderr
error: higher-ranked subtype error
  --> $DIR/impl-fn-ignore-binder-via-bottom.rs:30:14
   |
LL |     let _x = <fn(&())>::make_f();
   |              ^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/impl-fn-ignore-binder-via-bottom.rs:30:14
   |
LL |     let _x = <fn(&())>::make_f();
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/impl-fn-ignore-binder-via-bottom.rs:30:14
   |
LL |     let _x = <fn(&())>::make_f();
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors

